--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,34 @@
-<html>
+{% load static %}
+<html>   
     <head>
         <title>El blog de Mariano</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     </head>
 
     <body>
-        <div>
-            <h1><a href="/">Mariano en Django Girls Blog</a></h1>
+        <div class="page-header">
+            <h1><a href="/">Mariano en Django Girls Blog con CSS</a></h1>
         </div>
-    
-    <br/> <br/>
+        <br/> <br/>
 
-        {% for post in posts %} 
-        
-        <div>
-            <p> publicado: {{ post.published_date }}</p>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-            <br/>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% for post in posts %}
+                        <div class="post">
+                            <div class="date">
+                                <p>publicado: {{ post.published_date }}</p>
+                            </div>
+                            <h2><a href="">{{ post.title }}</a></h2>
+                            <p>{{ post.text|linebreaksbr }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-
-        {% endfor %}
-    
+            
     </body>
 </html>
